--- a/practicas/practica2.ipynb
+++ b/practicas/practica2.ipynb
@@ -254,11 +254,11 @@
         "print(\"Perímetro Circulo 2:\", round(c2.perimetro_circulo(),2))\n"
       ],
       "metadata": {
-        "id": "9EzYnd_4BYVs",
-        "outputId": "426ddb01-f7a6-4f28-82a7-8a8c92b568f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9EzYnd_4BYVs",
+        "outputId": "426ddb01-f7a6-4f28-82a7-8a8c92b568f3"
       },
       "id": "9EzYnd_4BYVs",
       "execution_count": 86,
@@ -307,6 +307,143 @@
         "* Determine cuál de los 3 puntos A, B o C, se encuentra más alejado del origen. \n",
         "* Cree un rectángulo utilizando los puntos A y B.\n",
         "* Muestre la base, altura y área del rectángulo."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "class Punto2D:\n",
+        "    def __init__(self, x=0, y=0):\n",
+        "        self.x = x\n",
+        "        self.y = y\n",
+        "       \n",
+        "    def __str__(self):\n",
+        "        return f\"({self.x},{self.y})\"\n",
+        "\n",
+        "    def cuadrante(x, y):\n",
+        "      if x > 0 and y > 0: return \"Primer cuadrante.\"\n",
+        "      elif x < 0 and y > 0: return \"Segundo cuadrante.\"\n",
+        "      elif x < 0 and y < 0: return \"Tercer cuadrante.\"\n",
+        "      elif x > 0 and y < 0: return \"Cuarto cuadrante.\"\n",
+        "      else: return \"Origen.\"\n",
+        "\n",
+        "\n",
+        "    def vector(self,b):\n",
+        "        return f\"El vector entre {self} y {b} es ({b.x-self.x},{b.y-self.y})\"\n",
+        "    def distancia(self,b):\n",
+        "        \n",
+        "        dis=math.sqrt((b.x-self.x)**2+(b.y-self.y)**2)\n",
+        "        return f\"La distancia entre {self} y {b} es {math.sqrt((b.x-self.x)**2+(b.y-self.y)**2)}\"\n",
+        "class Rectangulo:\n",
+        "    def __init__(self, base=0, altura=0):\n",
+        "        self.base = base\n",
+        "        self.altura=altura\n",
+        "        \n",
+        "    def area_rectangulo(self):\n",
+        "        return self.base*self.altura\n",
+        "    \n",
+        "#creamos los puntos A B C y D\n",
+        "\n",
+        "a = Punto2D(3,4)\n",
+        "b = Punto2D(-6,6)\n",
+        "c = Punto2D(-2,-1)\n",
+        "d = Punto2D(0,0)\n",
+        "\n",
+        "print(\"Punto a:\",a)\n",
+        "print(\"Punto b:\",b)\n",
+        "print(\"Punto c:\",c)\n",
+        "print(\"Punto d:\",d)\n",
+        "\n",
+        "\n",
+        "# cuadrantes \n",
+        "\n",
+        "print(f\"Punto,({a.x},{a.y}),esta en el \")\n",
+        "print(f\"Punto,({b.x},{b.y}),esta en el \")\n",
+        "print(f\"Punto,({c.x},{c.y}),esta en el \")\n",
+        "print(f\"Punto,({d.x},{d.y}),esta en el\") #{cuadrante(x,y)}\")\n",
+        "\n",
+        "\n",
+        "#vectores\n",
+        "\n",
+        "print(a.vector(b))\n",
+        "print(b.vector(a))\n",
+        "\n",
+        "# distancia de A a B y de B a A\n",
+        "\n",
+        "print(a.distancia(b))\n",
+        "print(b.distancia(a))  \n",
+        "\n",
+        "\n",
+        "e=d.distancia(a)\n",
+        "f=d.distancia(b)\n",
+        "g=d.distancia(c)\n",
+        "\n",
+        "lista=[e,f,g]\n",
+        "lista.sort()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "#distancia al origen\n",
+        "print(e)\n",
+        "print(f)\n",
+        "print(g)\n",
+        "\n",
+        "\n",
+        "#creamos el triangulo con las coordenadas x e y de los puntos A y B\n",
+        "base_rectangulo=a.x-b.x\n",
+        "altura_rectangulo=abs(a.y-b.y)\n",
+        "print(base_rectangulo)\n",
+        "print(altura_rectangulo)\n",
+        "\n",
+        "\n",
+        "h1 = Rectangulo(base_rectangulo,abs(altura_rectangulo))            \n",
+        "\n",
+        "print(\"Área Rectangulo :\", round(h1.area_rectangulo(),2))   \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "2Uz1K9ejbTRP",
+        "outputId": "27539e8c-bd11-4ac0-85b1-ade844784e32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "2Uz1K9ejbTRP",
+      "execution_count": 139,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n",
+            "2\n",
+            "Área Rectangulo : 18\n",
+            "Punto a: (3,4)\n",
+            "Punto b: (-6,6)\n",
+            "Punto c: (-2,-1)\n",
+            "Punto d: (0,0)\n",
+            "El vector entre (3,4) y (-6,6) es (-9,2)\n",
+            "El vector entre (-6,6) y (3,4) es (9,-2)\n",
+            "La distancia entre (3,4) y (-6,6) es 9.219544457292887\n",
+            "La distancia entre (-6,6) y (3,4) es 9.219544457292887\n",
+            "La distancia entre (0,0) y (3,4) es 5.0\n",
+            "La distancia entre (0,0) y (-6,6) es 8.48528137423857\n",
+            "La distancia entre (0,0) y (-2,-1) es 2.23606797749979\n",
+            "Punto,(3,4),esta en el \n",
+            "Punto,(-6,6),esta en el \n",
+            "Punto,(-2,-1),esta en el \n",
+            "Punto,(0,0),esta en el\n"
+          ]
+        }
       ]
     },
     {
