--- a/practicas/practica2.ipynb
+++ b/practicas/practica2.ipynb
@@ -334,7 +334,6 @@
         "        return f\"El vector entre {self} y {b} es ({b.x-self.x},{b.y-self.y})\"\n",
         "    def distancia(self,b):\n",
         "        \n",
-        "        dis=math.sqrt((b.x-self.x)**2+(b.y-self.y)**2)\n",
         "        return f\"La distancia entre {self} y {b} es {math.sqrt((b.x-self.x)**2+(b.y-self.y)**2)}\"\n",
         "class Rectangulo:\n",
         "    def __init__(self, base=0, altura=0):\n",
@@ -345,6 +344,8 @@
         "        return self.base*self.altura\n",
         "    \n",
         "#creamos los puntos A B C y D\n",
+        "print(\"-------------------------CREAMOS LOS PUNTOS A B C y D---------------------\")\n",
+        "\n",
         "\n",
         "a = Punto2D(3,4)\n",
         "b = Punto2D(-6,6)\n",
@@ -359,6 +360,8 @@
         "\n",
         "# cuadrantes \n",
         "\n",
+        "print(\"-------------------------CUADRANTES----------------------\")\n",
+        "\n",
         "print(f\"Punto,({a.x},{a.y}),esta en el \")\n",
         "print(f\"Punto,({b.x},{b.y}),esta en el \")\n",
         "print(f\"Punto,({c.x},{c.y}),esta en el \")\n",
@@ -367,38 +370,49 @@
         "\n",
         "#vectores\n",
         "\n",
-        "print(a.vector(b))\n",
-        "print(b.vector(a))\n",
+        "print(\"-------------------------VECTOR AB y BA----------------------\")\n",
+        "\n",
+        "print(a.vector(b),2)\n",
+        "print(b.vector(a),2)\n",
         "\n",
         "# distancia de A a B y de B a A\n",
         "\n",
+        "print(\"-------------------------DISTANCIA DE A a B y DE B a A----------------------\")\n",
         "print(a.distancia(b))\n",
         "print(b.distancia(a))  \n",
         "\n",
+        "#distancia al origen\n",
         "\n",
-        "e=d.distancia(a)\n",
-        "f=d.distancia(b)\n",
-        "g=d.distancia(c)\n",
+        "print(\"-------------------------DISTANCIA DEL ORIGEN RESPECTO DEL PUNTO A B y C----------------------\")\n",
+        "e=math.sqrt((d.x-a.x)**2+(d.y-a.y)**2)  #distancia desde D hasta A\n",
+        "f=math.sqrt((d.x-b.x)**2+(d.y-b.y)**2)  #distancia desde D hasta B\n",
+        "g=math.sqrt((d.x-c.x)**2+(d.y-c.y)**2)  #distancia desde D hasta c\n",
+        "\n",
+        "\n",
         "\n",
         "lista=[e,f,g]\n",
-        "lista.sort()\n",
+        "lista.sort(reverse=True)\n",
         "\n",
+        "print(f\"La distancia entre el punto A y el origen o punto D es {e}\")\n",
+        "print(f\"La distancia entre el punto A y el origen o punto D es {f}\")\n",
+        "print(f\"La distancia entre el punto A y el origen o punto D es {g}\")\n",
         "\n",
-        "\n",
-        "\n",
-        "#distancia al origen\n",
-        "print(e)\n",
-        "print(f)\n",
-        "print(g)\n",
-        "\n",
+        "if e>f and e>g:\n",
+        "  print(f\"El punto A es el que mas distancia tiene con respecto al Origen\")\n",
+        "elif f>e and f>g:\n",
+        "  print(f\"El punto B es el que mas distancia tiene con respecto al Origen\")\n",
+        "else:\n",
+        "  print(f\"El punto C es el que mas distancia tiene con respecto al Origen\")\n",
         "\n",
         "#creamos el triangulo con las coordenadas x e y de los puntos A y B\n",
+        "\n",
+        "print(\"-------------------------CREAMOS LA BASE Y ALTURA DEL RECTANGULO----------------------\")\n",
         "base_rectangulo=a.x-b.x\n",
         "altura_rectangulo=abs(a.y-b.y)\n",
-        "print(base_rectangulo)\n",
-        "print(altura_rectangulo)\n",
+        "print(f\"La base del rectanculo es {base_rectangulo}\")\n",
+        "print(f\"La altura del rectangulo es {altura_rectangulo}\")\n",
         "\n",
-        "\n",
+        "print(\"-------------------------CALCULAMOS EL AREA DEL RECTANGULO----------------------\")\n",
         "h1 = Rectangulo(base_rectangulo,abs(altura_rectangulo))            \n",
         "\n",
         "print(\"Área Rectangulo :\", round(h1.area_rectangulo(),2))   \n",
@@ -411,40 +425,60 @@
         "\n"
       ],
       "metadata": {
-        "id": "2Uz1K9ejbTRP",
-        "outputId": "27539e8c-bd11-4ac0-85b1-ade844784e32",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2Uz1K9ejbTRP",
+        "outputId": "6b8d468f-b8ec-436b-a83c-e1474a7ee5ad"
       },
       "id": "2Uz1K9ejbTRP",
-      "execution_count": 139,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "9\n",
-            "2\n",
-            "Área Rectangulo : 18\n",
+            "-------------------------CREAMOS LOS PUNTOS A B C y D---------------------\n",
             "Punto a: (3,4)\n",
             "Punto b: (-6,6)\n",
             "Punto c: (-2,-1)\n",
             "Punto d: (0,0)\n",
-            "El vector entre (3,4) y (-6,6) es (-9,2)\n",
-            "El vector entre (-6,6) y (3,4) es (9,-2)\n",
-            "La distancia entre (3,4) y (-6,6) es 9.219544457292887\n",
-            "La distancia entre (-6,6) y (3,4) es 9.219544457292887\n",
-            "La distancia entre (0,0) y (3,4) es 5.0\n",
-            "La distancia entre (0,0) y (-6,6) es 8.48528137423857\n",
-            "La distancia entre (0,0) y (-2,-1) es 2.23606797749979\n",
+            "-------------------------CUADRANTES----------------------\n",
             "Punto,(3,4),esta en el \n",
             "Punto,(-6,6),esta en el \n",
             "Punto,(-2,-1),esta en el \n",
-            "Punto,(0,0),esta en el\n"
+            "Punto,(0,0),esta en el\n",
+            "-------------------------VECTOR AB y BA----------------------\n",
+            "El vector entre (3,4) y (-6,6) es (-9,2) 2\n",
+            "El vector entre (-6,6) y (3,4) es (9,-2) 2\n",
+            "-------------------------DISTANCIA DE A a B y DE B a A----------------------\n",
+            "La distancia entre (3,4) y (-6,6) es 9.219544457292887\n",
+            "La distancia entre (-6,6) y (3,4) es 9.219544457292887\n",
+            "-------------------------DISTANCIA DEL ORIGEN RESPECTO DEL PUNTO A B y C----------------------\n",
+            "La distancia entre el punto A y el origen o punto D es 5.0\n",
+            "La distancia entre el punto A y el origen o punto D es 8.48528137423857\n",
+            "La distancia entre el punto A y el origen o punto D es 2.23606797749979\n",
+            "El punto B es el que mas distancia tiene con respecto al Origen\n",
+            "-------------------------CREAMOS LA BASE Y ALTURA DEL RECTANGULO----------------------\n",
+            "La base del rectanculo es 9\n",
+            "La altura del rectangulo es 2\n",
+            "-------------------------CALCULAMOS EL AREA DEL RECTANGULO----------------------\n",
+            "Área Rectangulo : 18\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "5k3gwh9NpZ_4"
+      },
+      "id": "5k3gwh9NpZ_4",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
