--- a/practicas/practica2.ipynb
+++ b/practicas/practica2.ipynb
@@ -323,7 +323,7 @@
         "        return f\"({self.x},{self.y})\"\n",
         "\n",
         "    def cuadrante(x, y):\n",
-        "      if x > 0 and y > 0: return \"Primer cuadrante.\"\n",
+        "      if x > 0 and y > 0: return f\"({self.x},{self.y}Primer cuadrante.)\"\n",
         "      elif x < 0 and y > 0: return \"Segundo cuadrante.\"\n",
         "      elif x < 0 and y < 0: return \"Tercer cuadrante.\"\n",
         "      elif x > 0 and y < 0: return \"Cuarto cuadrante.\"\n",
@@ -498,6 +498,90 @@
         "* Usar el condicional ```if __name__ == \"__main__\"``` que permite convertir el archivo .py en un **módulo** que se pueda importar desde otros archivos y así poder usar las funciones creadas como si se tratara de una librería.\n",
         "\n",
         "![matriz_01.png](https://github.com/financieras/pyCourse/blob/main/jupyter/img/matriz_01.png?raw=1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "random.seed()\n",
+        "\n",
+        "def genera1():\n",
+        "    \n",
+        "    m = [[0]*4 for _ in range(3)]         # inicializamos la matriz m como una matriz 3x3 de ceros\n",
+        "    for i in range(3):                    # recorremos las filas y columnas\n",
+        "        for j in range(4):\n",
+        "            m[i][j] = random.randint(1,9) # asignamos una aleatorio a cada elemento          \n",
+        "    return m\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":                # creamos un procedimiento principal aislado de la función\n",
+        "    print(genera1())\n",
+        "\n",
+        "l=[genera1()]\n",
+        "print(l)\n",
+        "\n",
+        "def transforma(l):\n",
+        "    for i,v in enumerate(l):\n",
+        "        if v%2==0: l[i] = 0\n",
+        "        else: l[i] = 1\n",
+        "    return l\n",
+        "\n",
+        "print(transforma(genera1()))\n",
+        "print(\"--------------------------------------------------------------------\")\n",
+        "\n",
+        "from random import randint, seed, choice\n",
+        "seed()\n",
+        "\n",
+        "def generaLista(m):\n",
+        "    lista = []\n",
+        "    for i in range(m):\n",
+        "        lista.append(m)\n",
+        "    return lista\n",
+        "print(generaLista(12))\n",
+        "        \n",
+        "def transforma(lista):\n",
+        "    for i,v in enumerate(lista):\n",
+        "        if v: lista[i] = choice(range(3,10,2))\n",
+        "        else: lista[i] = choice(range(2,9,2))\n",
+        "    return lista\n",
+        "        \n",
+        "    \n",
+        "ceros_unos = generaLista(12)\n",
+        "print(ceros_unos)\n",
+        "print(transforma(ceros_unos))"
+      ],
+      "metadata": {
+        "id": "yGiC4aswPYyx",
+        "outputId": "a92589cd-0ce5-4f8e-cf46-568194d84bd4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 391
+        }
+      },
+      "id": "yGiC4aswPYyx",
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[5, 9, 7, 9], [1, 7, 3, 9], [8, 4, 4, 4]]\n",
+            "[[[2, 4, 8, 7], [1, 2, 8, 4], [1, 9, 1, 4]]]\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-54-9bc6ceef7f4b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtransforma\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenera1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"--------------------------------------------------------------------\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-54-9bc6ceef7f4b>\u001b[0m in \u001b[0;36mtransforma\u001b[0;34m(l)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtransforma\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for %: 'list' and 'int'"
+          ]
+        }
       ]
     },
     {
