--- a/practica2.ipynb
+++ b/practica2.ipynb
@@ -322,11 +322,11 @@
         "    def __str__(self):\n",
         "        return f\"({self.x},{self.y})\"\n",
         "\n",
-        "    def cuadrante(x, y):\n",
-        "      if x > 0 and y > 0: return \"Primer cuadrante.\"\n",
-        "      elif x < 0 and y > 0: return \"Segundo cuadrante.\"\n",
-        "      elif x < 0 and y < 0: return \"Tercer cuadrante.\"\n",
-        "      elif x > 0 and y < 0: return \"Cuarto cuadrante.\"\n",
+        "    def cuadrante(self):\n",
+        "      if self.x > 0 and self.y > 0: return \"Primer cuadrante\"\n",
+        "      elif self.x < 0 and self.y > 0: return \"Segundo cuadrante.\"\n",
+        "      elif self.x < 0 and self.y < 0: return \"Tercer cuadrante.\"\n",
+        "      elif self.x > 0 and self.y < 0: return \"Cuarto cuadrante.\"\n",
         "      else: return \"Origen.\"\n",
         "\n",
         "\n",
@@ -363,10 +363,10 @@
         "\n",
         "print(\"-------------------------CUADRANTES----------------------\")\n",
         "\n",
-        "print(f\"Punto,({a.x},{a.y}),esta en el  \")\n",
-        "print(f\"Punto,({b.x},{b.y}),esta en el \")\n",
-        "print(f\"Punto,({c.x},{c.y}),esta en el \")\n",
-        "print(f\"Punto,({d.x},{d.y}),esta en el\") #{cuadrante(self,x,y)}\")\n",
+        "print(f\"Punto A,({a.x},{a.y}),esta en el {a.cuadrante()}  \")\n",
+        "print(f\"Punto B,({b.x},{b.y}),esta en el {b.cuadrante()} \")\n",
+        "print(f\"Punto C,({c.x},{c.y}),esta en el {c.cuadrante()} \")\n",
+        "print(f\"Punto D,({d.x},{d.y}),esta en el {d.cuadrante()} \")\n",
         "\n",
         "\n",
         "#vectores\n",
@@ -430,10 +430,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Uz1K9ejbTRP",
-        "outputId": "23ba4859-8e86-4054-fae9-35f8549f5b4b"
+        "outputId": "8c9fee80-6c28-4db0-b7ad-ad6e0fa75618"
       },
       "id": "2Uz1K9ejbTRP",
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,10 +445,10 @@
             "Punto c: (-2,-1)\n",
             "Punto d: (0,0)\n",
             "-------------------------CUADRANTES----------------------\n",
-            "Punto,(3,4),esta en el  \n",
-            "Punto,(-6,6),esta en el \n",
-            "Punto,(-2,-1),esta en el \n",
-            "Punto,(0,0),esta en el\n",
+            "Punto A,(3,4),esta en el Primer cuadrante  \n",
+            "Punto B,(-6,6),esta en el Segundo cuadrante. \n",
+            "Punto C,(-2,-1),esta en el Tercer cuadrante. \n",
+            "Punto D,(0,0),esta en el Origen. \n",
             "-------------------------VECTOR AB y BA----------------------\n",
             "El vector entre (3,4) y (-6,6) es (-9,2) 2\n",
             "El vector entre (-6,6) y (3,4) es (9,-2) 2\n",
