--- a/practica2.ipynb
+++ b/practica2.ipynb
@@ -45,6 +45,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Creamos la clase persona y sus atributos, incluimos el peso como atributo.\n",
+        "\n",
         "class Persona:\n",
         "    def __init__(self,nombre,edad,profesion,altura,ciudad,peso):\n",
         "        self.nombre = nombre\n",
@@ -56,10 +58,10 @@
         "   \n",
         "    def __str__(self):\n",
         "       \n",
-        "        print(f\"{self.nombre}, tiene {self.edad}, vive en {self.ciudad}, mide {self.altura}m, pesa {self.peso}kg y trabaja de \", end=\"\")\n",
+        "        print(f\"{self.nombre}, tiene {self.edad}, vive en {self.ciudad}, mide {self.altura}m, pesa {self.peso}kg y trabaja de \", end=\"\") #Nos cuenta algo de su vida\n",
         "        return self.profesion\n",
         "\n",
-        "\n",
+        "#Creamos los dos objetos\n",
         "\n",
         "Sergio = Persona(\"Sergio Vadillo\",\"34\",\"Actuario\",\"1.75\",\"Madrid\",\"80\")\n",
         "Gema =Persona(\"Gema Martin\",\"39\",\"Contable\",\"1.56\",\"Toledo\",\"50\")\n",
@@ -110,6 +112,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Creamos la clase Tarjeta con atributos y metodos\n",
+        "\n",
         "class Tarjeta:\n",
         "    def __init__(self, nombre_cliente, edad, credito_solicitado,limite_tarjeta):\n",
         "        self.__nombre = nombre_cliente       # atributo que pretende ser privado\n",
@@ -203,6 +207,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#creamos la clase rectangulo\n",
+        "\n",
         "class Rectangulo:\n",
         "    def __init__(self, ancho, largo):\n",
         "        self.ancho = ancho\n",
@@ -231,6 +237,9 @@
         "print(\"Perímetro Rectangulo 1:\", round(h1.perimetro_rectangulo(),2))   #perimetro rectangulo 1 coincide con los numeros obtenidos en n1 y n2\n",
         "print(\"Área Rectangulo 2:\", round(h2.area_rectangulo(),2))\n",
         "print(\"Perímetro Rectangulo 2:\", round(h2.perimetro_rectangulo(),2))\n",
+        "\n",
+        "\n",
+        "#creamos la clase circulo\n",
         "\n",
         "import math\n",
         "class Circulo:\n",
@@ -323,11 +332,11 @@
         "        return f\"({self.x},{self.y})\"\n",
         "\n",
         "    def cuadrante(self):\n",
-        "      if self.x > 0 and self.y > 0: return \"Primer cuadrante\"\n",
-        "      elif self.x < 0 and self.y > 0: return \"Segundo cuadrante.\"\n",
-        "      elif self.x < 0 and self.y < 0: return \"Tercer cuadrante.\"\n",
-        "      elif self.x > 0 and self.y < 0: return \"Cuarto cuadrante.\"\n",
-        "      else: return \"Origen.\"\n",
+        "      if self.x > 0 and self.y > 0: return f\"Primer cuadrante\"\n",
+        "      elif self.x < 0 and self.y > 0: return f\"Segundo cuadrante.\"\n",
+        "      elif self.x < 0 and self.y < 0: return f\"Tercer cuadrante.\"\n",
+        "      elif self.x > 0 and self.y < 0: return f\"Cuarto cuadrante.\"\n",
+        "      else: return f\"Origen.\"\n",
         "\n",
         "\n",
         "    def vector(self,b):\n",
@@ -335,18 +344,29 @@
         "    def distancia(self,b):\n",
         "        \n",
         "        return f\"La distancia entre {self} y {b} es {math.sqrt((b.x-self.x)**2+(b.y-self.y)**2)}\"\n",
+        "\n",
+        "\n",
         "class Rectangulo:\n",
-        "    def __init__(self, base=0, altura=0):\n",
-        "        self.base = base\n",
-        "        self.altura=altura\n",
-        "        \n",
-        "    def area_rectangulo(self):\n",
-        "        return self.base*self.altura\n",
-        "    \n",
+        "    def __init__(self, Inicial=Punto2D(0,0), Final=Punto2D(0,0)):\n",
+        "        self.Inicial = Inicial\n",
+        "        self.Final = Final\n",
+        "        self.Base = abs(self.Final.x - self.Inicial.x)\n",
+        "        self.Altura = abs(self.Final.y - self.Inicial.y)\n",
+        "        self.Area = self.Base * self.Altura\n",
+        " \n",
+        "    def base(self):\n",
+        "        print(\"La base del rectángulo es {}\".format( self.Base ) )\n",
+        " \n",
+        "    def altura(self):\n",
+        "        print(\"La altura del rectángulo es {}\".format( self.Altura ) )\n",
+        " \n",
+        "    def area(self):\n",
+        "        print(\"El área del rectángulo es {}\".format( self.Area ) )\n",
+        "\n",
         "#creamos los puntos A B C y D\n",
         "print(\"-------------------------CREAMOS LOS PUNTOS A B C y D---------------------\")\n",
         "\n",
-        "w=(3,4)\n",
+        "\n",
         "\n",
         "a = Punto2D(3,4)\n",
         "b = Punto2D(-6,6)\n",
@@ -407,17 +427,11 @@
         "\n",
         "#creamos el triangulo con las coordenadas x e y de los puntos A y B\n",
         "\n",
-        "print(\"-------------------------CREAMOS LA BASE Y ALTURA DEL RECTANGULO----------------------\")\n",
-        "base_rectangulo=a.x-b.x\n",
-        "altura_rectangulo=abs(a.y-b.y)\n",
-        "print(f\"La base del rectanculo es {base_rectangulo}\")\n",
-        "print(f\"La altura del rectangulo es {altura_rectangulo}\")\n",
-        "\n",
-        "print(\"-------------------------CALCULAMOS EL AREA DEL RECTANGULO----------------------\")\n",
-        "h1 = Rectangulo(base_rectangulo,abs(altura_rectangulo))            \n",
-        "\n",
-        "print(\"Área Rectangulo :\", round(h1.area_rectangulo(),2))   \n",
-        "\n",
+        "print(\"-------------------------CREAMOS LA BASE, ALTURA y AREA DEL RECTANGULO----------------------\")\n",
+        "rectangulo2=Rectangulo(a,b)\n",
+        "rectangulo2.base()\n",
+        "rectangulo2.altura()\n",
+        "rectangulo2.area()\n",
         "\n",
         "\n",
         "\n",
@@ -430,10 +444,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Uz1K9ejbTRP",
-        "outputId": "8c9fee80-6c28-4db0-b7ad-ad6e0fa75618"
+        "outputId": "790cda3a-8998-4fae-e8ab-df99eef9d2cc"
       },
       "id": "2Uz1K9ejbTRP",
-      "execution_count": 5,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,11 +474,10 @@
             "La distancia entre el punto A y el origen o punto D es 8.48528137423857\n",
             "La distancia entre el punto A y el origen o punto D es 2.23606797749979\n",
             "El punto B es el que mas distancia tiene con respecto al Origen\n",
-            "-------------------------CREAMOS LA BASE Y ALTURA DEL RECTANGULO----------------------\n",
-            "La base del rectanculo es 9\n",
-            "La altura del rectangulo es 2\n",
-            "-------------------------CALCULAMOS EL AREA DEL RECTANGULO----------------------\n",
-            "Área Rectangulo : 18\n"
+            "-------------------------CREAMOS LA BASE, ALTURA y AREA DEL RECTANGULO----------------------\n",
+            "La base del rectángulo es 9\n",
+            "La altura del rectángulo es 2\n",
+            "El área del rectángulo es 18\n"
           ]
         }
       ]
@@ -505,45 +518,29 @@
       "cell_type": "code",
       "source": [
         "import random\n",
-        "import numpy as np\n",
         "random.seed()\n",
         "\n",
         "def genera():\n",
-        "    m = [[0]*4 for _ in range(3)]         # inicializamos la matriz m como una matriz 3x3 de ceros\n",
+        "    m = [[0]*4 for _ in range(3)]         # inicializamos la matriz m como una matriz 4x3 de ceros\n",
         "    for i in range(3):                    # recorremos las filas y columnas\n",
         "        for j in range(4):\n",
         "            m[i][j] = random.randint(1,9) # asignamos una aleatorio a cada elemento\n",
         "    return m\n",
         "\n",
-        "if __name__ == \"__main__\":                # creamos un procedimiento principal aislado de la función\n",
-        "    print(genera())\n",
-        "    \n",
-        "print(\"--------------------------------------------------------------------\")\n",
+        "             \n",
         "\n",
-        "from random import randint, seed, choice\n",
-        "seed()\n",
-        "\n",
-        "mat = np.array(genera())\n",
-        "\n",
-        "print(mat.flatten().tolist())\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "def generaLista(n=1):\n",
-        "    lista = []\n",
-        "    for i in range(n):\n",
-        "        lista.append(mat)\n",
-        "    return lista\n",
-        "        \n",
         "def transforma(lista):\n",
-        "    for i,v in enumerate(lista):\n",
-        "        if v%2==0: lista[i] = 1\n",
-        "        else: lista[i] = 0\n",
+        "    for i in range(3):\n",
+        "      for j in range(4):\n",
+        "        v=lista[i][j]\n",
+        "        if v%2==0: lista[i][j] = 1\n",
+        "        else: lista[i][j] = 0\n",
         "    return lista\n",
-        "        \n",
-        "    \n",
-        "ceros_unos = generaLista(12)\n",
+        "\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":          # creamos un procedimiento principal aislado de la función\n",
+        "    ceros_unos = genera()\n",
         "print(ceros_unos)\n",
         "print(transforma(ceros_unos))\n",
         "\n",
@@ -552,59 +549,20 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 843
+          "base_uri": "https://localhost:8080/"
         },
         "id": "yGiC4aswPYyx",
-        "outputId": "569d457e-f187-42c5-8477-d6de9595a8db"
+        "outputId": "ba2a5690-e7e0-4b90-bf3e-8ebc9d217202"
       },
       "id": "yGiC4aswPYyx",
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[5, 2, 3, 5], [1, 5, 7, 1], [7, 4, 7, 1]]\n",
-            "--------------------------------------------------------------------\n",
-            "[8, 7, 3, 5, 3, 3, 6, 1, 2, 8, 9, 7]\n",
-            "[array([[8, 7, 3, 5],\n",
-            "       [3, 3, 6, 1],\n",
-            "       [2, 8, 9, 7]]), array([[8, 7, 3, 5],\n",
-            "       [3, 3, 6, 1],\n",
-            "       [2, 8, 9, 7]]), array([[8, 7, 3, 5],\n",
-            "       [3, 3, 6, 1],\n",
-            "       [2, 8, 9, 7]]), array([[8, 7, 3, 5],\n",
-            "       [3, 3, 6, 1],\n",
-            "       [2, 8, 9, 7]]), array([[8, 7, 3, 5],\n",
-            "       [3, 3, 6, 1],\n",
-            "       [2, 8, 9, 7]]), array([[8, 7, 3, 5],\n",
-            "       [3, 3, 6, 1],\n",
-            "       [2, 8, 9, 7]]), array([[8, 7, 3, 5],\n",
-            "       [3, 3, 6, 1],\n",
-            "       [2, 8, 9, 7]]), array([[8, 7, 3, 5],\n",
-            "       [3, 3, 6, 1],\n",
-            "       [2, 8, 9, 7]]), array([[8, 7, 3, 5],\n",
-            "       [3, 3, 6, 1],\n",
-            "       [2, 8, 9, 7]]), array([[8, 7, 3, 5],\n",
-            "       [3, 3, 6, 1],\n",
-            "       [2, 8, 9, 7]]), array([[8, 7, 3, 5],\n",
-            "       [3, 3, 6, 1],\n",
-            "       [2, 8, 9, 7]]), array([[8, 7, 3, 5],\n",
-            "       [3, 3, 6, 1],\n",
-            "       [2, 8, 9, 7]])]\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-109-95b66e5d0220>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0mceros_unos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgeneraLista\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mceros_unos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtransforma\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mceros_unos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-109-95b66e5d0220>\u001b[0m in \u001b[0;36mtransforma\u001b[0;34m(lista)\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtransforma\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlista\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlista\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlista\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlista\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mlista\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+            "[[7, 3, 2, 1], [5, 1, 7, 9], [8, 4, 6, 7]]\n",
+            "[[0, 0, 1, 0], [0, 0, 0, 0], [1, 1, 1, 0]]\n"
           ]
         }
       ]
