--- a/practica2.ipynb
+++ b/practica2.ipynb
@@ -591,37 +591,111 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "from random import randint, seed\n",
         "seed()\n",
         "\n",
-        "n = 6   # filas\n",
-        "m = 6   # columnas\n",
         "\n",
-        "matriz = [[1]*m for _ in range(n)]\n",
-        "print(matriz)\n",
         "\n",
-        "for i in range(len(matriz)):\n",
-        "    for j in range(len(matriz[1])):\n",
-        "        matriz[i][j] = randint(0,1)\n",
+        "for i in range(len()):\n",
+        "    for j in range(len()):\n",
+        "        matriz = (random.choices([0,1],[0.1,0.9], k=5))\n",
         "\n",
         "print(matriz)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 235
         },
         "id": "PGN11mIYp0Rg",
-        "outputId": "a2cd482e-aad3-4802-9843-ba47590b860a"
+        "outputId": "6e6e8679-1597-46c2-ac39-d2f9230dbcec"
       },
       "id": "PGN11mIYp0Rg",
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[1, 1, 1, 1, 1, 1], [1, 1, 1, 1, 1, 1], [1, 1, 1, 1, 1, 1], [1, 1, 1, 1, 1, 1], [1, 1, 1, 1, 1, 1], [1, 1, 1, 1, 1, 1]]\n",
-            "[[0, 0, 1, 1, 0, 1], [1, 1, 0, 0, 0, 1], [0, 1, 0, 0, 0, 0], [1, 0, 1, 1, 0, 1], [0, 0, 0, 0, 0, 0], [1, 1, 0, 0, 0, 0]]\n"
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-38-f210d1b7cff3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mmatriz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoices\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.9\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: len() takes exactly one argument (0 given)"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Solution(object):\n",
+        "   def setZeroes(self, matriz):\n",
+        "      n = len(matriz)\n",
+        "      m = len(matriz[0])\n",
+        "      flag = False\n",
+        "      if matriz[0][0] == 0:\n",
+        "         flag = True\n",
+        "         row = False\n",
+        "         column = False\n",
+        "      for i in range(1,n):\n",
+        "         if matriz[i][0] == 0:\n",
+        "            column = True\n",
+        "            break\n",
+        "      for i in range(1,m):\n",
+        "         if matriz[0][i] == 0:\n",
+        "            row = True\n",
+        "            break\n",
+        "      for i in range(1,n):\n",
+        "         for j in range(1,m):\n",
+        "            if matriz[i][j] == 0:\n",
+        "               matriz[0][j] = 0\n",
+        "               matriz[i][0]=0\n",
+        "      for i in range(1,n):\n",
+        "         for j in range(1,m):\n",
+        "            if not matriz[i][0] or not matriz[0][j]:\n",
+        "               matriz[i][j] = 0\n",
+        "      if flag:\n",
+        "         for i in range(n):\n",
+        "            matriz[i][0] = 0\n",
+        "         for i in range(m):\n",
+        "            matriz[0][i]=0\n",
+        "      else:\n",
+        "         if column:\n",
+        "            for i in range(n):\n",
+        "               matriz[i][0]=0\n",
+        "         if row:\n",
+        "            for i in range(m):\n",
+        "               matriz[0][i]=0\n",
+        "      return matriz\n",
+        "ob1 = Solution()\n",
+        "print(ob1.setZeroes([[1,0,1],[1,1,1],[1,1,1]]))"
+      ],
+      "metadata": {
+        "id": "InTJYr9gUB8e",
+        "outputId": "11bc403b-8673-44e2-dc87-545577f2901f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 322
+        }
+      },
+      "id": "InTJYr9gUB8e",
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "UnboundLocalError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-29-93a8870812f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     39\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mmatriz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0mob1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mob1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetZeroes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-29-93a8870812f2>\u001b[0m in \u001b[0;36msetZeroes\u001b[0;34m(self, matriz)\u001b[0m\n\u001b[1;32m     31\u001b[0m             \u001b[0mmatriz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m       \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m          \u001b[0;32mif\u001b[0m \u001b[0mcolumn\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m                \u001b[0mmatriz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'column' referenced before assignment"
           ]
         }
       ]
